--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/validatorjs": "^3.15.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "concurrency": "^0.1.4",
@@ -20,10 +21,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.23.0"
+    "sequelize": "^6.23.0",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
